--- a/src/main/resources/com/projects/taxicorporation/client/LoginForm.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/LoginForm.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -42,9 +44,18 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Label layoutX="81.0" layoutY="300.0" prefHeight="17.0" prefWidth="92.0" text="Nie masz konta?" />
-                  <Label layoutX="173.0" layoutY="300.0" onMouseClicked="#onRegisterButtonClicked" text="Zarejestruj się!" textFill="#d31414" />
+                  <Label layoutX="173.0" layoutY="300.0" onMouseClicked="#onRegisterButtonClicked" text="Zarejestruj się!" textFill="#d31414">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <effect>
+                        <Bloom threshold="1.0" />
+                     </effect></Label>
                </children>
             </Pane>
         </items>
