--- a/src/main/resources/com/projects/taxicorporation/client/AddManager.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/AddManager.fxml
@@ -16,7 +16,7 @@
                         <Font name="Arial Bold" size="19.0" />
                      </font>
                   </Label>
-                  <Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" onMouseClicked="#onAddMenagerButtonClicked" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj menadżera" textFill="WHITE">
+                  <Button layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: rgb(211,20,20);" text="Dodaj menadżera" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
