--- a/src/main/resources/com/projects/taxicorporation/client/DriverPanel.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/DriverPanel.fxml
@@ -16,7 +16,7 @@
                         <Font name="Arial Bold" size="19.0" />
                      </font>
                   </Label>
-                  <Button layoutX="12.0" layoutY="189.0" mnemonicParsing="false" onMouseClicked="#onMyJobsButtonClicked" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: rgb(211,20,20);" text="Moje zlecenia" textFill="WHITE">
+                  <Button layoutX="12.0" layoutY="189.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: rgb(211,20,20);" text="Moje zlecenia" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
