Added Light/Dark theme switch button to all panels

--- a/src/main/resources/com/projects/taxicorporation/client/ClientPanel.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ClientPanel.fxml
@@ -15,6 +15,11 @@
                                 <Font name="Arial Bold" size="19.0" />
                             </font>
                         </Label>
+                        <Button mnemonicParsing="false" style="-fx-background-color: lightgrey;" text="Light/Dark">
+                            <font>
+                                <Font size="10.0" />
+                            </font>
+                        </Button>
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
