--- a/src/main/resources/com/projects/taxicorporation/client/ShowMap.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ShowMap.fxml
@@ -38,6 +38,11 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <Button mnemonicParsing="false" style="-fx-background-color: lightgrey;" text="Light/Dark">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
                </children></AnchorPane>
              <MapView fx:id="mapView" prefHeight="468.0" prefWidth="542.0" />
         </items>
