--- a/src/main/resources/com/projects/taxicorporation/client/RegisterForm.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/RegisterForm.fxml
@@ -62,6 +62,11 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Button>
+                  <Button layoutX="361.0" layoutY="374.0" mnemonicParsing="false" style="-fx-background-color: lightgrey;" text="Light/Dark">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
                </children></AnchorPane>
         </items>
       </SplitPane>
