Change cursor style of light/dark buttons at panels

--- a/src/main/resources/com/projects/taxicorporation/client/ClientPanel.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ClientPanel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -19,6 +20,9 @@
                             <font>
                                 <Font size="10.0" />
                             </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
                         </Button>
                     </children>
                 </AnchorPane>
