--- a/src/main/resources/com/projects/taxicorporation/client/ShowMap.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/ShowMap.fxml
@@ -42,6 +42,9 @@
                      <font>
                         <Font size="10.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
                   </Button>
                </children></AnchorPane>
              <MapView fx:id="mapView" prefHeight="468.0" prefWidth="542.0" />
