--- a/src/main/resources/com/projects/taxicorporation/client/AddDepartment.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/AddDepartment.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -19,6 +20,9 @@
                        <font>
                            <Font size="10.0" />
                        </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
                    </Button>
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="468.0" prefWidth="542.0">
