--- a/src/main/resources/com/projects/taxicorporation/client/LoginFormDark.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/LoginFormDark.fxml
@@ -52,6 +52,9 @@
                      <font>
                         <Font size="10.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
