--- a/src/main/resources/com/projects/taxicorporation/client/RegisterForm.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/RegisterForm.fxml
@@ -66,6 +66,9 @@
                      <font>
                         <Font size="10.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
                   </Button>
                </children></AnchorPane>
         </items>
