--- a/src/main/resources/com/projects/taxicorporation/client/LoginForm.fxml
+++ b/src/main/resources/com/projects/taxicorporation/client/LoginForm.fxml
@@ -48,7 +48,7 @@
                      <effect>
                         <Bloom threshold="1.0" />
                      </effect></Label>
-                  <Button layoutX="250.0" layoutY="374.0" mnemonicParsing="false" style="-fx-background-color: lightgrey;" text="Light/Dark">
+                  <Button mnemonicParsing="false" onMouseClicked="#onChangeThemeButtonClicked" style="-fx-background-color: lightgrey;" text="Light/Dark">
                      <font>
                         <Font size="10.0" />
                      </font>
